# apps/api/app/shared/generated/openapi_models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-06-29T10:24:16+00:00
+#   timestamp: 2026-07-01T23:47:38+00:00
 
 from __future__ import annotations
 
@@ -1210,6 +1210,11 @@ class ModelUploadTemplateResponse(BaseModel):
     requires_embedding_metadata: Optional[bool] = Field(
         False, title="Requires Embedding Metadata"
     )
+
+
+class PaginatedResponseDataset(BaseModel):
+    items: List[Dataset] = Field(..., title="Items")
+    total: int = Field(..., title="Total")
 
 
 class PaginatedResponseSampleWithLabels(BaseModel):
