# openapi/openapi.yaml
@@ -153,32 +153,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/HTTPValidationError"
   /api/v1/datasets:
-    get:
-      tags:
-        - datasets
-      summary: List Datasets
-      operationId: list_datasets_api_v1_datasets_get
-      responses:
-        "200":
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: "#/components/schemas/Dataset"
-                type: array
-                title: Response List Datasets Api V1 Datasets Get
     post:
       tags:
         - datasets
       summary: Create Dataset
       operationId: create_dataset_api_v1_datasets_post
       requestBody:
+        required: true
         content:
           application/json:
             schema:
               $ref: "#/components/schemas/CreateDatasetRequest"
-        required: true
       responses:
         "200":
           description: Successful Response
@@ -186,6 +171,42 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Dataset"
+        "422":
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HTTPValidationError"
+    get:
+      tags:
+        - datasets
+      summary: List Datasets
+      operationId: list_datasets_api_v1_datasets_get
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            maximum: 200
+            minimum: 1
+            default: 50
+            title: Limit
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+            title: Offset
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PaginatedResponse_Dataset_"
         "422":
           description: Validation Error
           content:
@@ -6323,6 +6344,21 @@ components:
         - slug
         - created_at
       title: OrgResponse
+    PaginatedResponse_Dataset_:
+      properties:
+        items:
+          items:
+            $ref: "#/components/schemas/Dataset"
+          type: array
+          title: Items
+        total:
+          type: integer
+          title: Total
+      type: object
+      required:
+        - items
+        - total
+      title: PaginatedResponse[Dataset]
     PaginatedResponse_SampleWithLabels_:
       properties:
         items:
